nginx-prod/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-prod   # `metadata.name` is consistent and unique
  namespace: prod

  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nginx-prod
    app.kubernetes.io/part-of: ce-grp-1
    app.kubernetes.io/managed-by: argocd
    environment: prod

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx   # `spec.selector.matchLabels` matches `template.metadata.labels`
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/instance: nginx-prod
        app.kubernetes.io/part-of: ce-grp-1
        app.kubernetes.io/managed-by: argocd
        environment: prod
        app: nginx  # Important for service selector
    spec:
      containers:
      - name: nginx
        image: nginx:latest   # Correct Docker image used
        ports:
        - containerPort: 80   # `containerPort` matches `targetPort` in the Service

        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
