nginx-prod/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-prod   # `metadata.name` matches `backend.service.name` in the Ingress
  namespace: prod

  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nginx-prod-webapp-aalimsee
    app.kubernetes.io/part-of: ce-grp-1
    app.kubernetes.io/managed-by: argocd
    environment: prod

annotations:
# Remove or comment this line to make it external
# service.beta.kubernetes.io/aws-load-balancer-internal: "true"

spec:
  selector:
    app: nginx   # `spec.selector` matcheslabels in the Deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80   # `port` and `targetPort` align with container settings
  type: ClusterIP   # `type: ClusterIP` if behind Ingress; `NodePort` only for testing/debugging
